# aise-v2-backend

./: .env.preview.example  .env.prod.example  .gitignore  ANALYSIS.md  CLAUDE.md  DESIGN.md  FRONTEND_DESIGN.md  INTEGRATION_TEST_PHASE3_HITL.md  MIGRATION_PLAN.md  PLAN_ARTIFACT_LINEAGE.md  PROGRESS.md  deploy.sh  docker-compose.preview.yml  docker-compose.yml  start-dev.sh  start-local.sh
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 13788b005ba9_add_records_table.py  535a79769c7e_add_artifact_version_lineage.py  86e012962feb_extend_sections_phase2.py  87a2d3f47ca6_initial_mvp_models.py  8f8875d1d811_extend_glossary_items_phase2.py  9d8f1e2c3b4a_add_hitl_requests.py  a1b2c3d4e5f6_add_knowledge_documents_and_chunks.py  a2b3c4d5e6f7_add_sessions_and_session_messages.py  a4c1b2d3e4f5_add_artifacts_core.py  (+14 more)
backend/scripts/: setup_test_db.py  setup_test_db.sh  smoke_langgraph_chat.py
backend/src/: main.py
backend/src/utils/: db.py  (+4 more)
backend/tests/: conftest.py  test_agent.py  test_agent_registry.py  test_agents_router.py  test_artifact_record.py  test_artifact_svc.py  test_assist.py  test_critic_agent.py  test_general_chat.py  test_glossary.py  test_hitl_interrupt.py  test_orchestration.py  test_project.py  test_query_rewriter.py  test_rag_isolation.py  test_record.py  test_requirement.py  test_requirement_agent.py  test_requirement_guides.py  test_retrieval_gate.py  test_review.py  test_section.py  test_session.py  test_srs_generator_agent.py  test_testcase_generator_agent.py  test_text_chunker.py
(+379 files in other folders)
